--- a/src/Components/ContactID/ContactID.module.css
+++ b/src/Components/ContactID/ContactID.module.css
@@ -1,15 +1,17 @@
 .Card {
-    background-color: #47A8BD;
+    background-color: #68c6db;
     font-weight: bold; 
     /* background-color: #639A88; */
     display: flex;
     flex-flow: row;
-    justify-content: center;
+    justify-content: space-around;
     width: 100%;
     height: fit-content;
     min-width: 300px;
     max-height: 100%;
     padding: 20px;
+    padding-bottom: 6px;
+    border-bottom: 2px solid hsla(0, 0%, 0%, 0.527);
 }
 
 .Card h2 {
@@ -17,10 +19,10 @@
     padding: 3px;
     width: fit-content;
     height: fit-content;
-    border: 2px solid black;
+    border-bottom: 2px solid black;
 }
 .Card h3, p {
-    margin: 10px auto;
+    margin: 6px auto;
     width: fit-content;
 }
 .Card text {
@@ -29,7 +31,3 @@
     width: fit-content;
     height: fit-content;
 }
-
-/* .Card:hover {
-    transform: scale(1.05);
-} */
