--- a/src/Components/Exp/Exp.module.css
+++ b/src/Components/Exp/Exp.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     margin: 0 auto;
     box-sizing: border-box;
+    padding: 5px;
 }
 .Card h2{
     margin: 0px auto;
@@ -10,9 +11,29 @@
     height: fit-content;
     border-bottom: 2px solid black;
 }
-    /* transition: transform 0.3s;
-    cursor: pointer;
+.Exp {
+    font-size: 16px;
+    font-weight: bold;
+    padding-left: 40px;
+    margin: 15px 8px;
+    margin-right: 80px;
+    /* width: fit-content; */
+    list-style-type: none;  
+    -webkit-columns: 1;
+    -moz-columns: 1;
+    columns: 1;
+    list-style-position: inside;
+    transition: letter-spacing 0.3s;
 }
-.Card h2:hover {
-    transform: scale(1.1);
-} */
+.Exp div{
+    font-weight: normal;
+    font-size: 14px;
+    margin: 4px 50px 4px 15px;
+    text-align: justify;
+}
+
+.Exp li:hover {
+    letter-spacing: 1px;
+    cursor: pointer;
+} 
+
