--- a/src/Components/Degree/Degree.module.css
+++ b/src/Components/Degree/Degree.module.css
@@ -11,12 +11,12 @@
     height: fit-content;
     border-bottom: 2px solid black;
 }
-.Projects{ 
+.Edu {
     font-size: 16px;
     font-weight: bold;
     padding-left: 40px;
     margin: 15px 8px;
-    width: fit-content;
+    margin-right: 80px;
     list-style-type: none;  
     -webkit-columns: 1;
     -moz-columns: 1;
@@ -24,13 +24,15 @@
     list-style-position: inside;
     transition: letter-spacing 0.3s;
 }
-.Projects div{
+.Edu div{
     font-weight: normal;
     font-size: 14px;
     margin: 4px 50px 4px 15px;
     text-align: justify;
 }
-.Projects li:hover {
+
+.Edu li:hover {
     letter-spacing: 1px;
     cursor: pointer;
 } 
+
