--- a/src/Components/Skills/Skills.module.css
+++ b/src/Components/Skills/Skills.module.css
@@ -2,12 +2,12 @@
     width: 100%;
     margin: 0 auto;
     box-sizing: border-box;
-    padding: 5px;
+    padding: 5px 30px;
 }
 .Card h2{
-    margin: 0px auto;
+    margin: 0px 12px;
     padding: 3px;
-    width: fit-content;
+    /* width: fit-content; */
     height: fit-content;
     border-bottom: 2px solid black;
 }
