--- a/src/Components/Resume/Resume.module.css
+++ b/src/Components/Resume/Resume.module.css
@@ -1,7 +1,7 @@
 .Resume {
     margin: 0px auto;
     padding-bottom: 20px;
-    background-color: #F9F9F1;
+    background-color: white;
     box-sizing: border-box;
     width: 900px;
     border-radius: 5px;
